--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <hr class="my-4">
     <p>I am a one who accept the competitive and challenging environment, a strong planner and problem solver who readily adapts to change, works independently and exceeds expectations and able to juggle multiple priorities and meet tight deadlines without compromising quality for achieving my objective.</p>
     <p class="lead">
-        <a class="btn btn-primary btn-lg" role="button">More Details</a>
+        <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://github.com/jdamilasp">Git - Project</a>
     </p>
 </div>
 
